Replace directory src

--- a/src/index.html
+++ b/src/index.html
@@ -73,15 +73,15 @@
     </div>
      
   </div>
-  <!-- <script src="./src/js/Api.js"></script> -->
-  <!-- <script src="./src/js/functions.js"></script>  
-  <script src="./src/js/Card.js"></script>
-  <script src="./src/js/CardList.js"></script>
-  <script src="./src/js/Popup.js"></script>
-  <script src="./src/js/PopupForm.js"></script>
-  <script src="./src/js/PopupFormEdit.js"></script>
-  <script src="./src/js/PopupFormPlace.js"></script>
-  <script src="./src/js/PopupImage.js"></script>  -->
-  <script src="./code.js"></script>
+  <!-- <script src="./js/Api.js"></script>
+  <script src="./js/functions.js"></script>  
+  <script src="./js/Card.js"></script>
+  <script src="./js/CardList.js"></script>
+  <script src="./js/Popup.js"></script>
+  <script src="./js/PopupForm.js"></script>
+  <script src="./js/PopupFormEdit.js"></script>
+  <script src="./js/PopupFormPlace.js"></script>
+  <script src="./js/PopupImage.js"></script>  -->
+  <script type = "module" src="./code.js"></script>
 </body>
 </html>
