Modificate index.html

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,6 @@
   <script src="./js/PopupFormEdit.js"></script>
   <script src="./js/PopupFormPlace.js"></script>
   <script src="./js/PopupImage.js"></script>  -->
-  <script type = "module" src="./code.js"></script>
+  <script src="./code.js"></script>
 </body>
 </html>
